Updated resume, fixed URL Shortener css gap

--- a/frontend/src/pages/UrlShortener.module.css
+++ b/frontend/src/pages/UrlShortener.module.css
@@ -6,7 +6,7 @@
 .inputContainer {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    gap: 0.5rem;
     margin-top: 5rem;
     justify-content: center;
 }
@@ -53,7 +53,7 @@
 .outputContainer {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    gap: 0.5rem;
     align-items: center;
     justify-content: center;
     margin-top: 10rem;
